--- a/Atividade3/index.html
+++ b/Atividade3/index.html
@@ -15,7 +15,13 @@
             alt="banner LGPD" width="1000" height="200" id="starter"></figure>
     <Figcaption>Descubra sobre o que se trata a LGPD!</Figcaption>
     <header>
-        <h1> O Que é a LGPD?</h1>
+        <nav>
+            <a href="#Topico1" style="text-align: right;">O que é a LGPD?</a>
+            <a href="#Topico2" style="text-align: right;">Consentimento</a>
+            <a href="#Topico3" style="text-align: right;">Quem Fiscaliza?</a>
+            <a href="#Topico4" style="text-align: right;">Como Cumprir a LGPD?</a>
+        </nav>
+        <h1 id="Topico1"> O Que é a LGPD?</h1>
         <section>
             <p>
                 <small>&emsp;A <i>Lei Geral de Proteção de Dados (13.709/2018)</i> tem como principal objetivo
@@ -56,7 +62,7 @@
         </section>
         <br><br>
         <section>
-            <h2>Consentimento</h2>
+            <h2 id="Topico2">Consentimento</h2>
             <p>
                 Na LGPD, o consentimento do titular dos dados é considerado elemento essencial para o tratamento, regra
                 excepcionada nos
@@ -73,7 +79,7 @@
             </p>
         </section>
         <section>
-            <h2>Quem fiscaliza?</h2>
+            <h2 id="Topico3">Quem fiscaliza?</h2>
             <p>
                 &ensp;Para fiscalizar e aplicar penalidades pelos descumprimentos da LGPD, o Brasil conta com a
                 Autoridade Nacional de
@@ -105,7 +111,7 @@
             </p>
         </section>
         <section>
-            <h2>Como Cumprir A LGPD?</h2>
+            <h2 id="Topico4">Como Cumprir A LGPD?</h2>
             <ul>
                 <li>
                     Nomear os “técnicos” do time
